# finance-telegram-bot

./: README.md  pyproject.toml
bot/: quotes.py
tests/: test_quotes.py
